--- a/Electric_Charging_Stations/templates/search.html
+++ b/Electric_Charging_Stations/templates/search.html
@@ -62,7 +62,7 @@
         </div>
         <hr>
         <div>
-          <button id = "button"> Find Stations Near Me</button>
+          <button onclick="getLocation()"> Find Stations Near Me</button>
         </div>
       </div>
       <div class="col-lg-10 col-md-10 col-sm-12">
@@ -71,9 +71,9 @@
     </div>
   </div>
     <script type="text/javascript" src="../static/js/config.js"></script>
-    <script type="text/javascript" src="../static/js/search.js"></script>
-    <script type="text/javascript" src="../static/js/getlocation.js"></script>
     <script type="text/javascript" src="../static/js/logic_filter_to_Vince.js"></script>
+    <script type="text/javascript" src="../static/js/search.js"></script>
+    <!-- <script type="text/javascript" src="../static/js/getlocation.js"></script> -->
 
 
   </body>
