--- a/Electric_Charging_Stations/templates/search.html
+++ b/Electric_Charging_Stations/templates/search.html
@@ -71,8 +71,8 @@
     <script type="text/javascript" src="../static/js/config.js"></script>
 
     <script type="text/javascript" src="../static/js/search.js"></script>
-    <script type="text/javascript" src="../static/js/logic_filter_to_Vince.js"></script>
-    <!-- <script type="text/javascript" src="../static/js/getlocation.js"></script> -->
+    <script type="text/javascript" src="../static/js/map_test.js"></script>
+    <script type="text/javascript" src="../static/js/getlocation.js"></script>
 
 
   </body>
